Fixed some execution errors

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,3 +5,7 @@ CommonButtonAcceptKeyHandling=TriggerClick
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=641038894085982BA31EA1A230E94F69
+
+[/Script/KMGoap.KMGoapSettings]
+PlannerConfig=/Game/Sample/Blueprints/AI/Config/DA_SamplePlannerConfig.DA_SamplePlannerConfig
+
