Added idle set of objects to test agent transitioning between goals and see the planner working

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -11,7 +11,11 @@ bDynamicReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagRedirects=(OldTagName="AI.GOAP.BELIEF.Nothing",NewTagName="AI.GOAP.BELIEF.AgentIdle")
++GameplayTagList=(Tag="AI.GOAP.ACTION.Idle",DevComment="")
 +GameplayTagList=(Tag="AI.GOAP.ACTION.MoveToDestination",DevComment="")
++GameplayTagList=(Tag="AI.GOAP.BELIEF.AgentIdle",DevComment="")
 +GameplayTagList=(Tag="AI.GOAP.BELIEF.AtDestination",DevComment="")
++GameplayTagList=(Tag="AI.GOAP.GOAL.AgentIdle",DevComment="")
 +GameplayTagList=(Tag="AI.GOAP.GOAL.GoToDestination",DevComment="")
 
