--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -16,6 +16,9 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="AI.GOAP.ACTION.MoveToDestination",DevComment="")
 +GameplayTagList=(Tag="AI.GOAP.BELIEF.AgentIdle",DevComment="")
 +GameplayTagList=(Tag="AI.GOAP.BELIEF.AtDestination",DevComment="")
++GameplayTagList=(Tag="AI.GOAP.BELIEF.TargetItem",DevComment="")
 +GameplayTagList=(Tag="AI.GOAP.GOAL.AgentIdle",DevComment="")
 +GameplayTagList=(Tag="AI.GOAP.GOAL.GoToDestination",DevComment="")
++GameplayTagList=(Tag="AI.GOAP.SENSOR.Interactables",DevComment="")
++GameplayTagList=(Tag="AI.GOAP.SENSOR.Items",DevComment="")
 
